6896370: CTW fails share/vm/opto/matcher.cpp:1475 "duplicating node that's already been matched"

Move DecodeN code outside the memory nodes only code.

Reviewed-by: never